# hack-ls

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: README.md  main.cpp  main.hpp
src/common/: GlobalState.hpp  logging.cpp  logging.hpp
src/core/: utils.cpp  utils.hpp
src/core/handlers/: MessageHandler.cpp  MessageHandler.hpp
src/core/structure/: TextDocument.cpp  TextDocument.hpp
src/core/structures/: TextDocument.cpp  TextDocument.hpp
src/core/transport/: io.cpp  io.hpp  wire.cpp  wire.hpp
src/protocol/: lsp.hpp  messages.hpp  params.hpp  responses.hpp  types.hpp
